<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_AddCourse">

    <include android:id="@+id/AC_toolbar" layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/AC_toolbar"
        android:fillViewport="false"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/subject_code_or_subject_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/transparent_border"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/e_g_pe"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/true_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv1"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/program"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_course" />

            <EditText
                android:id="@+id/et_program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/transparent_border"
                android:fontFamily="@font/poppinsmedium"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/true_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv3"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/grade_level"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_program" />

            <EditText
                android:id="@+id/et_grade_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/transparent_border"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/e_g_5"
                android:inputType="number"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/true_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv4"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/section"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_grade_level" />

            <EditText
                android:id="@+id/et_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/transparent_border"
                android:fontFamily="@font/poppinsmedium"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/true_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv5"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/department"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_section" />

            <EditText
                android:id="@+id/et_college"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/transparent_border"
                android:fontFamily="@font/poppinsmedium"
                android:padding="10dp"
                android:maxLines="1"
                android:layout_marginBottom="50dp"
                android:textColor="@color/black"
                android:textColorHint="@color/true_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv6"
                android:importantForAutofill="no" />

<!--            <Button-->
<!--                android:id="@+id/btn_add"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="25dp"-->
<!--                android:backgroundTint="#005bff"-->
<!--                android:fontFamily="@font/poppinsmedium"-->
<!--                android:text="@string/save"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="18sp"-->
<!--                app:layout_constraintTop_toBottomOf="@id/et_college" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>